@@ -166,6 +166,8 @@ particular products (I apologize if I have missed anybody):
 	Richard Hurt
 	Phil Endecott
 	Koen Wybo
+	Mark Moeller
+	Bertus W.
 
 
 And many others for their many helpful suggestions and bug reports -- thanks.
