@@ -449,6 +449,18 @@
   </Template>
 
   <!-- =================================================================== -->
+  <!-- Avery 8195 family: Return address labels                            -->
+  <!-- =================================================================== -->
+  <Template brand="Avery" part="8195" size="US-Letter" description="Return Address Labels">
+    <Meta category="label"/>
+    <Meta category="mail"/>
+    <Label-rectangle id="0" width="1.75in" height="0.666in" round="0.063in" x_waste="0in" y_waste="0in">
+      <Markup-margin size="0.125in"/>
+      <Layout nx="4" ny="15" x0="0.297in" y0="0.531in" dx="2.031in" dy="0.666in"/>
+    </Label-rectangle>
+  </Template>
+
+  <!-- =================================================================== -->
   <!-- Avery 8373 family: Business Cards, 2'' x 3_1/2'', 8 per sheet     x -->
   <!-- =================================================================== -->
   <Template brand="Avery" part="8373" size="US-Letter" _description="Business Cards">
